# KnowledgeForge

./: .gitignore  CLAUDE.md  README.md  RELEASES.md  pyproject.toml
knowledgeforge/: __init__.py
knowledgeforge/analysis/: __init__.py  blast_radius.py
knowledgeforge/cli/: __init__.py  main.py
knowledgeforge/defaults/: __init__.py  cache_manager.py  indexer.py  language_config.py  mental_extractor.py  parser.py  pattern_extractor.py  storage.py  tree_sitter_parser.py  web_visualizer.py
knowledgeforge/mcp/: __init__.py  server.py
knowledgeforge/skeleton/: __init__.py  confidence.py  contracts.py  evidence.py  pipeline.py  result.py
knowledgeforge/verification/: __init__.py  test_verify.py
tests/: __init__.py  test_phase0.py  test_phase1.py  test_phase2.py
